--- a/i18n/zh-TW.yaml
+++ b/i18n/zh-TW.yaml
@@ -10,10 +10,10 @@ categories:
 
 # ===== footer =====
 powered:
-  other: '由 %s 強力驅動'
+  other: 'Powered by %s '
 
 theme:
-  other: '主題'
+  other: 'Theme'
 
 siteUV:
   other: '本站總訪客數 %s 人'
